--- a/index2.html
+++ b/index2.html
@@ -125,6 +125,21 @@ $(document).ready(function(){
 		.on('swipeRight', handleSwipeRight)
 		.on('screenReleased', handleScrollRelease)
 
+	// try a way of cheating...
+	var w = $('.viewer').width()
+	var h = $('.viewer').height()
+	$('.content').each(function(_, e){
+		var e = $(e)
+		var ew = e.width()
+		var eh = e.height()
+		var ratio = ew/eh
+		e.height(h)
+		e.width(ratio * h)
+	})
+	$('.magazine').css({
+		'margin-top': -h/2,
+		height: h,
+	})
 
 	// XXX stub...
 	setTransitionEasing($('.magazine'), 'ease-out')
@@ -151,7 +166,7 @@ $(document).ready(function(){
 				<!--h1 style="color:gray;font-size:125px;margin-bottom:-35px; margin-top: 160px">PortableMag</h1>
 				<h1 style="color:silver; font-size: 20px; margin-left:10px">A suit for publishing portable periodic magazines on mobile platforms.</h1-->
 
-				<svg width="800" height="600" xmlns="http://www.w3.org/2000/svg">
+				<svg width="100%" height="100%" xmlns="http://www.w3.org/2000/svg">
 				 <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
 				 <g>
 				  <title>PortableMag cover</title>
@@ -178,8 +193,8 @@ $(document).ready(function(){
 
 		<div class="article">
 			<div class="cover page">
-				<div class="content">
-					<h1 name="basics" style="color:gray;font-size:100px;">The Basics...</h1>
+				<div class="content" style="">
+					<h1 name="basics" style="color:gray;font-size:12em;margin-bottom: 0em;">The Basics...</h1>
 					<big>
 						<h2>Main features</h2>
 						<ul>
