reading my last commit message, seams that I've forgoten English... no resize test...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index2.html
+++ b/index2.html
@@ -101,8 +101,8 @@ $(document).ready(function(){
 					'shift': prevPage									//	shift-Space
 				},
 				// combined navigation with actions..
-				38: function(){togglePageView()},						//	Up
-				40: function(){togglePageView()},						//	Down
+				//38: function(){togglePageView()},						//	Up
+				//40: function(){togglePageView()},						//	Down
 
 				70: function(){											//	F
 					togglePageFitMode()
@@ -151,7 +151,7 @@ $(document).ready(function(){
 
 	// XXX for some reason this does not work correctly on android the 
 	//		first time...
-	togglePageView('on')
+	//togglePageView('on')
 })
 
 
@@ -168,7 +168,7 @@ $(document).ready(function(){
 				<!--h1 style="color:gray;font-size:125px;margin-bottom:-35px; margin-top: 160px">PortableMag</h1>
 				<h1 style="color:silver; font-size: 20px; margin-left:10px">A suit for publishing portable periodic magazines on mobile platforms.</h1-->
 
-				<svg width="100%" height="100%" xmlns="http://www.w3.org/2000/svg">
+				<svg width="800" height="600" xmlns="http://www.w3.org/2000/svg">
 				 <!-- Created with SVG-edit - http://svg-edit.googlecode.com/ -->
 				 <g>
 				  <title>PortableMag cover</title>
@@ -196,7 +196,7 @@ $(document).ready(function(){
 		<div class="article">
 			<div class="cover page">
 				<div class="content" style="">
-					<h1 name="basics" style="color:gray;font-size:12em;margin-bottom: 0em;">The Basics...</h1>
+					<h1 name="basics" style="color:gray;font-size:100px;margin-bottom: 0px;">The Basics...</h1>
 					<big>
 						<h2>Main features</h2>
 						<ul>
