--- a/index.html
+++ b/index.html
@@ -762,7 +762,8 @@ $(document).ready(function(){
 						<button onclick="generateMagazineDownload()">build the magazine...</button>
 						<a id="data_download" style="display:none">download...</a>
 						<input type="file" id="upload" name="file" multiple onchange="handleFileSelect(event)"/>
-						Alternative layout: <a href="./layout.html">native scroll</a>, 
+						Alternative layouts: <a href="./layout.html">native scroll</a>, 
+						<a href="./index-iscroll.html">iscroll</a>
 						<a href="./index2.html">hand-written drag</a>
 					</p>
 
