--- a/index2.html
+++ b/index2.html
@@ -149,7 +149,7 @@ $(document).ready(function(){
 
 	// XXX for some reason this does not work correctly on android the 
 	//		first time...
-	togglePageView('on')
+	//togglePageView('on')
 })
 
 
