--- a/index2.html
+++ b/index2.html
@@ -17,6 +17,13 @@
 .magazine {
 	left: 150px;
 	margin-left: 0px;
+
+	/* magic */
+	-webkit-transform-origin: 0 0;
+	-moz-transform-origin: 0 0;
+	-o-transform-origin: 0 0;
+	-ms-transform-origin: 0 0;	
+	transform-origin: 0 0;
 }
 
 .current.page {
