doing magic testing...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index-iscroll.html
+++ b/index-iscroll.html
@@ -73,7 +73,7 @@
 <script src="ext-lib/jquery.scrollto.js"></script>
 <script src="ext-lib/jquery.scrollstop.js"></script>
 
-<script src="ext-lib/iscroll.js"></script>
+<script src="ext-lib/iscroll-custom.js"></script>
 
 <script src="lib/jli.js"></script>
 
