--- a/index2.html
+++ b/index2.html
@@ -122,7 +122,7 @@ $(document).ready(function(){
 		}, 
 		function(k){console.log(k)}))
 
-	setTransformOrigin($('.magazine'))
+	//setTransformOrigin($('.magazine'))
 
 	window.MagazineScroller = makeScrollHandler($('.viewer'), {
 		hScroll: true,
@@ -132,7 +132,7 @@ $(document).ready(function(){
 
 	$('.viewer')
 		.on('scrollCancelled', function(){ setCurrentPage() })
-		.on('shortClick', handleClick)
+		//.on('shortClick', handleClick)
 		.on('swipeLeft', handleSwipeLeft) 
 		.on('swipeRight', handleSwipeRight)
 		.on('screenReleased', handleScrollRelease)
