--- a/index2.html
+++ b/index2.html
@@ -128,6 +128,7 @@ $(document).ready(function(){
 		hScroll: true,
 		vScroll: false,
 		//enableMultiClicks: true,
+		transitionEasing: 'cubic-bezier(0.33,0.66,0.66,1)',
 	}).start()
 
 	$('.viewer')
@@ -157,7 +158,8 @@ $(document).ready(function(){
 	*/
 
 	// XXX stub...
-	setTransitionEasing($('.magazine'), 'ease-out')
+	//setTransitionEasing($('.magazine'), 'ease-out')
+	setTransitionEasing(mag, 'cubic-bezier(0.33,0.66,0.66,1)')
 
 	runMagazineTemplates()
 	setCurrentPage(0)
