--- a/index2.html
+++ b/index2.html
@@ -159,7 +159,7 @@ $(document).ready(function(){
 
 	// XXX stub...
 	//setTransitionEasing($('.magazine'), 'ease-out')
-	setTransitionEasing(mag, 'cubic-bezier(0.33,0.66,0.66,1)')
+	setTransitionEasing($('.magazine'), 'cubic-bezier(0.33,0.66,0.66,1)')
 
 	runMagazineTemplates()
 	setCurrentPage(0)
