--- a/index2.html
+++ b/index2.html
@@ -134,28 +134,12 @@ $(document).ready(function(){
 	$('.viewer')
 		.on('scrollCancelled', function(){ setCurrentPage() })
 		//.on('shortClick', handleClick)
-		//.on('swipeLeft', handleSwipeLeft) 
-		//.on('swipeRight', handleSwipeRight)
-		//.on('screenReleased', handleScrollRelease)
-		.on('screenReleased swipeRight swipeLeft', handleScrollRelease)
-
-	/*
-	// try a way of cheating...
-	var w = $('.viewer').width()
-	var h = $('.viewer').height()
-	$('.content').each(function(_, e){
-		var e = $(e)
-		var ew = e.width()
-		var eh = e.height()
-		var ratio = ew/eh
-		e.height(h)
-		e.width(ratio * h)
-	})
-	$('.magazine').css({
-		'margin-top': -h/2,
-		height: h,
-	})
-	*/
+		.on('swipeLeft', handleSwipeLeft) 
+		.on('swipeRight', handleSwipeRight)
+		.on('screenReleased', handleScrollRelease)
+		/*
+		*/
+		//.on('screenReleased swipeRight swipeLeft', handleScrollRelease)
 
 	// XXX stub...
 	//setTransitionEasing($('.magazine'), 'ease-out')
