doing magic testing...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index2.html
+++ b/index2.html
@@ -134,12 +134,12 @@ $(document).ready(function(){
 	$('.viewer')
 		.on('scrollCancelled', function(){ setCurrentPage() })
 		//.on('shortClick', handleClick)
+		/*
 		.on('swipeLeft', handleSwipeLeft) 
 		.on('swipeRight', handleSwipeRight)
 		.on('screenReleased', handleScrollRelease)
-		/*
 		*/
-		//.on('screenReleased swipeRight swipeLeft', handleScrollRelease)
+		.on('screenReleased swipeRight swipeLeft', handleScrollRelease)
 
 	// XXX stub...
 	//setTransitionEasing($('.magazine'), 'ease-out')
