added basic (brain-dead) manual animation engine...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index-iscroll.html
+++ b/index-iscroll.html
@@ -118,7 +118,7 @@ $(document).ready(function(){
 		//momentum: false,
 		momentum: true,
 		hScrollbar: false,
-		useTransition: true,
+		//useTransition: true,
 	})
 
 	// XXX stub...
