--- a/index2.html
+++ b/index2.html
@@ -135,17 +135,17 @@ $(document).ready(function(){
 
 	$('.viewer')
 		.on('scrollCancelled', function(){ setCurrentPage() })
-		//.on('shortClick', handleClick)
-		/*
+		.on('shortClick', handleClick)
 		.on('swipeLeft', handleSwipeLeft) 
 		.on('swipeRight', handleSwipeRight)
 		.on('screenReleased', handleScrollRelease)
-		*/
+		/*
 		.on('screenReleased swipeRight swipeLeft', handleScrollRelease)
+		*/
 
 	// XXX stub...
 	//setTransitionEasing($('.magazine'), 'ease-out')
-	setTransitionEasing($('.magazine'), 'cubic-bezier(0.33,0.66,0.66,1)')
+	//setTransitionEasing($('.magazine'), 'cubic-bezier(0.33,0.66,0.66,1)')
 	prepareTransitions($('.magazine'))
 	$('.viewer').css('overflow', 'hidden')
 
@@ -154,7 +154,7 @@ $(document).ready(function(){
 
 	// XXX for some reason this does not work correctly on android the 
 	//		first time...
-	//togglePageView('on')
+	togglePageView('on')
 })
 
 
