--- a/index2.html
+++ b/index2.html
@@ -129,6 +129,7 @@ $(document).ready(function(){
 	window.MagazineScroller = makeScrollHandler($('.viewer'), {
 		hScroll: true,
 		vScroll: false,
+		preCallback: function(){stopAnimation($('.magazine'))},
 		//enableMultiClicks: true,
 		transitionEasing: 'cubic-bezier(0.33,0.66,0.66,1)',
 	}).start()
