now long-click in full view switches to ribbon and in ribbon centers a page, while short-click in full view either does the default dance or if clicked on a different page toggles that and in ribbon opens the clicked page in full view...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@ $(document).ready(function(){
 	$('.viewer')
 		.on('scrollCancelled swipeUp swipeDown', function(){ setCurrentPage() })
 		.on('shortClick', handleClick)
+		.on('longClick', handleLongClick)
 		.on('swipeLeft', handleSwipeLeft) 
 		.on('swipeRight', handleSwipeRight)
 		.on('screenReleased', handleScrollRelease)
