--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
 <script src="ext-lib/iscroll-custom.js"></script>
 
 <script src="lib/jli.js"></script>
+<script src="lib/scroller.js"></script>
+<script src="lib/keyboard.js"></script>
+
+<script src="lib/log.js"></script>
 
 <script src="magazine.js"></script>
 <script src="layout.js"></script>
