added two finger actions and migrated article nav...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@ function prepareTransitions(elem){
 }
 
 $(document).ready(function(){
+	$(window)
+		//.resize(viewResizeHandler)
+		.resize(updateView)
+		.bind('hashchange', hashChangeHandler)
+
 	// keyboard...
 	$(document)
 		.keydown(makeKeyboardHandler({
