--- a/index.html
+++ b/index.html
@@ -120,8 +120,11 @@ $(document).ready(function(){
 
 				70: function(){											//	F
 					togglePageFitMode()
-				}
-
+				},
+				66: {
+					//'default': toggleBookmark,							//	B
+					'ctrl': function(){toggleThemes()},					//	ctrl-B
+				},
 			}
 		}, 
 		function(k){console.log(k)}))
