more cleanup and refactoring...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <script src="lib/scroller.js"></script>
 <script src="lib/keyboard.js"></script>
 
-<script src="lib/log.js"></script>
+<!--script src="lib/log.js"></script-->
 
 <script src="magazine.js"></script>
 <script src="layout.js"></script>
