some more refactoring, generalized the no-resize css class family (now there is no need to always explicitly include .no-resize), added a caption page template (still needs some tweeking)...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -746,32 +746,30 @@ $(document).ready(function(){
 				</div>
 			</div>
 
-			<div class="page no-resize page-align-left">
+			<div class="page page-align-left">
 				<div class="content" style="background:gold">
 					Left-aligned page...
 
 					<div class="page-number-text">[PAGE NUMBER]</div>
 				</div>
 			</div>
-			<div class="page no-resize page-align-center">
+			<div class="page page-align-center">
 				<div class="content" style="background:yellow; width: 600px">
 					Center-aligned page...
 
 					<div class="page-number-text">[PAGE NUMBER]</div>
 				</div>
 			</div>
-			<div class="page no-resize page-align-right">
+			<div class="page page-align-right">
 				<div class="content" style="background:gold; width: 400px">
 					Right-aligned page...
 
 					<div class="page-number-text">[PAGE NUMBER]</div>
 				</div>
 			</div>
-			<div class="page no-resize page-align-right">
-				<div class="content" style="background:orange; width: 200px">
+			<div class="page page-align-right caption-bottom-arrow light">
+				<div class="content" style="width: 200px">
 					Right-aligned page...
-
-					<div class="page-number-text">[PAGE NUMBER]</div>
 				</div>
 			</div>
 		</div>
