--- a/templates.html
+++ b/templates.html
@@ -138,6 +138,25 @@
 		</div>
 	</div>
 
+	<div class="page-box">
+		<div class="title">Raw Page</div>
+		<div class="page dark">
+			<div class="content">
+			</div>
+		</div>
+	</div>
+
+	<div class="page-box">
+		<div class="title">Raw Page</div>
+		<div class="page light">
+			<div class="content">
+			</div>
+		</div>
+	</div>
+
+	<div class="page-box">
+		<div class="title">Blank Template</div>
+	</div>
 
 
 
