--- a/templates.html
+++ b/templates.html
@@ -14,6 +14,9 @@
 	min-height: 300px;
 	margin: 25px;
 	overflow: auto;
+	background: white;
+	box-shadow: 5px 5px 200px 0px silver;
+	padding: 10px;
 }
 
 .container .page {
@@ -44,7 +47,7 @@
 	margin: 10px;
 	border: solid 1px silver;
 	overflow: hidden;
-	background: silver;
+	background: white;
 
 	box-shadow: 5px 5px 200px 30px gray inset;
 }
