minor edits and tweeks...
Signed-off-by: Alex A. Naanou <alex.nanou@gmail.com>

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ $(document).ready(function(){
 					togglePageFitMode()
 				},
 				66: {
-					//'default': toggleBookmark,							//	B
+					'default': toggleBookmark,							//	B
 					'ctrl': function(){toggleThemes()},					//	ctrl-B
 				},
 			}
