--- a/templates.html
+++ b/templates.html
@@ -41,7 +41,6 @@
 .container .page {
 	box-shadow: 5px 5px 200px 30px gray;
 
-
 	margin: 5%;
 
 	-webkit-transform-origin: 0 0;
@@ -63,7 +62,7 @@
 	bottom: 10%;
 	right: 10%;
 	z-index: 1000;
-	text-shadow: black 0.1em 0.1em 0.3em;
+	text-shadow: black 0.1em 0.1em 0.4em, black 0.1em 0.1em;
 }
 
 
